--- a/languages/unlimited-woocommerce-codes-es_ES.po
+++ b/languages/unlimited-woocommerce-codes-es_ES.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-05-25 22:45+0200\n"
+"PO-Revision-Date: 2018-05-27 11:31+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -33,8 +33,11 @@ msgstr "Mi cuenta"
 msgid "Woocommerce sections"
 msgstr "Secciones Woocommerce"
 
-msgid "Product categories"
-msgstr "Categorías de producto"
+msgid "Load in WooCommerce sections"
+msgstr "Cargar en estas secciones Woocommerce"
+
+msgid "Load in product categories"
+msgstr "Cargar en categorías de producto"
 
 msgid "Woocommerce code options"
 msgstr "Opciones de código woocommerce"
